Worked a bit more on the project. Split the code to more components.

--- a/client/src/components/SpeciesTable.css
+++ b/client/src/components/SpeciesTable.css
@@ -8,7 +8,9 @@ span.current-page {
     color: #ccc;
   }
 
-  .centeringThings {
+  .species-table {
     text-align: center;
     justify-content: center;
+    margin-left: auto;
+    margin-right: auto;
   }
