Fixed pagination problem. Worked a bit on the visualization.

--- a/client/src/components/SpeciesTable.css
+++ b/client/src/components/SpeciesTable.css
@@ -9,8 +9,9 @@ span.current-page {
   }
 
   .species-table {
+    display: flex;
     text-align: center;
     justify-content: center;
-    margin-left: auto;
-    margin-right: auto;
+    margin-left: 5%;
+    margin-right: 5%;
   }
