--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,7 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Lato&family=Montserrat&family=Roboto+Mono:wght@500&display=swap');
+
 html,
 body {
   background-color: #d9e4de;
   color: #283630;
+  
+  font-family: 'Lato', sans-serif;
+  font-family: 'Montserrat', sans-serif;
+  font-family: 'Roboto Mono', monospace;
 }
 
 .table-header,
