--- a/client/src/components/Home/Search.css
+++ b/client/src/components/Home/Search.css
@@ -1,8 +1,19 @@
+.explore-header {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: xxx-large;
+}
+
+.explore-header .svg {
+padding-right: 10px;
+}
+
 .search-input,
 .search-select {
-    border-style: #283630;
+    border: 2px solid #283630;
     border-radius: 5px;
-    margin: 0 2px;
+    margin: 0 5px;
     font-size: x-large;
     font-family: 'Lato', sans-serif;
     font-family: 'Montserrat', sans-serif;
@@ -10,8 +21,16 @@
 }
 
 .search-input {
-    width: 25%;
-    min-width: 25%;
+    position: relative;
+    margin-left: -7px;
+    text-indent: 12%;
+}
+
+.search-box .svg {
+    height: 1.5em;
+    z-index: 3;
+    position: absolute;
+    margin-top: 7px;
 }
 
 .search-select {
@@ -25,6 +44,5 @@
 }
 
 .dropdown-option:hover {
-  background-color: #283630;
+    background-color: #283630;
 }
-
