--- a/client/src/components/Home/Search.css
+++ b/client/src/components/Home/Search.css
@@ -59,7 +59,11 @@
     right: 15px;
 }
 
-.explore-link {
-    text-decoration: none;
-    color: #283630;
+.clear-icon:hover {
+    cursor: pointer;
+    padding: 1px 1px;
+    border: 2px solid #506e61;
+    border-radius: 100%;
+    opacity: 0.8;
+    transform: translate(3px,-3px);
 }
