--- a/client/src/components/Details/Content.css
+++ b/client/src/components/Details/Content.css
@@ -1,31 +1,40 @@
 .content {
-    width: 65%;
-    margin-left: 20%;
-    margin-right: 5%;
+  width: 65%;
+  margin-left: 20%;
+  margin-right: 5%;
 }
 
-hr {
-    background-color: #506e61;
-    border: none;
-    display: block;
-    height: 2px;
-    margin: 1.5rem 0;
+.content-hr {
+  background-color: #506e61;
+  border: none;
+  display: block;
+  height: 2px;
+  margin: 1.5rem 0;
 }
 
 .unknown {
-    position: relative;
-    top: 2px;
-  }
-  
-  .sub-row {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    width: auto;
-    margin-right: 40%;
-  }
-  
-  .sub-second-col p {
-    margin-bottom: 21px;
-  }
-  
+  position: relative;
+  top: 2px;
+}
+
+.sub-row {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  width: auto;
+  margin-right: 25%;
+}
+
+.sub-second-col p {
+  margin-bottom: 21px;
+}
+
+.content-links {
+  color: #283630;
+  text-decoration: underline;
+}
+
+.content-links p {
+  font-size: initial;
+  font-weight: 100;
+}
