--- a/client/src/components/Details/Sidebar.css
+++ b/client/src/components/Details/Sidebar.css
@@ -5,6 +5,10 @@
   transition: 1s;
 }
 
+.sidebar > ul > li:nth-child(1) > a{
+  font-size: larger !important;
+}
+
 .sidebar li a {
   font-size: large;
   cursor: pointer;
