--- a/client/src/components/Home/Search.css
+++ b/client/src/components/Home/Search.css
@@ -2,7 +2,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    font-size: xxx-large;
+    font-size: xx-large;
 }
 
 .explore-header .svg {
@@ -14,7 +14,8 @@
     border: 2px solid #283630;
     border-radius: 5px;
     margin: 0 5px;
-    font-size: x-large;
+    padding: 4px 0;
+    font-size: large;
     font-family: 'Lato', sans-serif;
     font-family: 'Montserrat', sans-serif;
     font-family: 'Roboto Mono', monospace;
@@ -65,5 +66,5 @@
     border: 2px solid #506e61;
     border-radius: 100%;
     opacity: 0.8;
-    transform: translate(3px,-3px);
+    transform: translate(3px, -3px);
 }
