Worked on the Sidebar, Breadcrumbs and Links

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -15,3 +15,26 @@ body {
 .pagination {
   margin-bottom: 2%;
 }
+
+.hover-underline-animation {
+  display: inline-block;
+  position: relative;
+}
+
+.hover-underline-animation::after {
+  content: '';
+  position: absolute;
+  width: 100%;
+  transform: scaleX(0);
+  height: 2px;
+  bottom: 0;
+  left: 0;
+  background-color: #283630;
+  transform-origin: bottom left;
+  transition: transform 0.50s ease-out;
+}
+
+.hover-underline-animation:hover::after {
+  transform: scaleX(1);
+  transform-origin: bottom left;
+}
