--- a/client/src/components/Details/Content.css
+++ b/client/src/components/Details/Content.css
@@ -34,11 +34,24 @@
 }
 
 .content-links {
-  color: #283630;
-  text-decoration: underline;
+  display: flex;
 }
 
 .content-links a {
   font-size: initial;
-  font-weight: 100;
+  text-decoration: none;
+  color: #283630;
+  padding: 0% 0.5%;
+  margin-right: 1%;
+  border: 2px solid #283630;
+  border-radius: 25px;
+}
+
+.content-links a:hover {
+  transition: 0.5s;
+  color: #d9e4de;
+  background-color: #283630;
+}
+.content-links a:hover p .svg {
+  filter: invert(88%) sepia(9%) saturate(150%) hue-rotate(95deg) brightness(104%) contrast(88%);
 }
