--- a/client/src/components/Details/Content.css
+++ b/client/src/components/Details/Content.css
@@ -33,15 +33,24 @@
   display: flex;
 }
 
+.spacing {
+  margin-top: 4%;
+}
+
+
 .content-links {
   display: flex;
+}
+
+.content-links p {
+  margin: 0%;
 }
 
 .content-links a {
   font-size: initial;
   text-decoration: none;
   color: #283630;
-  padding: 0% 0.5%;
+  padding: 0.5% 1%;
   margin-right: 1%;
   border: 2px solid #283630;
   border-radius: 25px;
@@ -52,6 +61,7 @@
   color: #d9e4de;
   background-color: #283630;
 }
+
 .content-links a:hover p .svg {
   filter: invert(88%) sepia(9%) saturate(150%) hue-rotate(95deg) brightness(104%) contrast(88%);
 }
