--- a/client/src/components/Details.css
+++ b/client/src/components/Details.css
@@ -10,24 +10,48 @@ ul {
 .svg {
   height: 1em;
 }
+
 @media (pointer:none),
 (pointer:coarse) {
-  .main {
-    flex-direction: column;
+
+  #top {
+    width: 0;
+    margin: 0;
+    display: inline;
+  }
+
+  .main-card {
+    display: flex;
   }
 
   .sidebar {
     display: none;
   }
 
-  .breadcrumb {
-    width: 0%;
-    margin-left: 0%;
-    display: none;
+  .sub-row {
+    flex-direction: column;
+    margin: 0;
   }
 
   .content {
     margin-left: 0%;
     width: 100%;
+  }
+
+  .sub-second-col,
+  .sidebar {
+    display: none;
+  }
+
+  .content-links a {
+    padding: 1% 2%;
+  }
+
+  .content-links .svg {
+    display: none;
+  }
+
+  .calendar-table {
+    display: none;
   }
 }
